--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,4 +23,16 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+
+}
+section,
+header,
+footer {
+  @apply px-8 md:px-16 2xl:px-48;
+}
+.hero-gradient {
+  /* background-image:url('authImage.png'); */
+ background-image:url('authImage.png');
+    background-color: "rgba(8, 84, 142, 0.4)";
+    background-blend-mode: "multiply";
 }
